outputs.OLD/production-metadata/HEAL-33054/unpackaged/unpackaged/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Aesthetics Sales Process</fullName>
        <description>Represents a Aesthetics Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Waiting For Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Consultation</fullName>
        <description>Represents a Medical Review with a patient over the phone.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Needs Scheduling</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Franchisee and Licensee Sales Process</fullName>
        <description>This is a sales process for potential 10x Franchisee/Licensees</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Kit Needs Sent</fullName>
        </values>
        <values>
            <fullName>Kit Sent</fullName>
        </values>
        <values>
            <fullName>Lab Received</fullName>
        </values>
        <values>
            <fullName>Need More Information</fullName>
        </values>
        <values>
            <fullName>Needs Scheduling</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>New Purchase</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending Results</fullName>
        </values>
        <values>
            <fullName>Physical Exam Completed</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Results Delivered to Client</fullName>
        </values>
        <values>
            <fullName>Results Received</fullName>
        </values>
        <values>
            <fullName>Scheduled</fullName>
        </values>
        <values>
            <fullName>Waiting For Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Genetic Testing</fullName>
        <description>Represents a Genetic Testing Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Kit Needs Sent</fullName>
        </values>
        <values>
            <fullName>Kit Sent</fullName>
        </values>
        <values>
            <fullName>Need More Information</fullName>
        </values>
        <values>
            <fullName>New Purchase</fullName>
        </values>
        <values>
            <fullName>Pending Results</fullName>
        </values>
        <values>
            <fullName>Results Delivered to Client</fullName>
        </values>
        <values>
            <fullName>Results Received</fullName>
        </values>
        <values>
            <fullName>Waiting For Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Hormone Evaluation Sales Process</fullName>
        <description>Represents a Hormone Evaluation Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Lab Received</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Physical Exam Completed</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Waiting For Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Lab Sales Process</fullName>
        <description>Represents a Lab and Medical Consultation Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Lab Received</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Waiting For Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Medical Consultation Sales Process</fullName>
        <description>Represents a Medical Consultation Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Physical Exam Completed</fullName>
        </values>
        <values>
            <fullName>Waiting For Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Medication Sales Process</fullName>
        <description>Represents a Medication Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Waiting For Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Membership Process</fullName>
        <description>Represents a Membership Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Waiting For Approval</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sexual Wellness Process</fullName>
        <description>Represents a Sexual Wellness Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Waiting For Approval</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AVA_SFCLOUD__AvaTax_Doc_Status__c</fullName>
        <description>Temporary = Not Saved to Avalara AvaTax
Saved = Saved but not Posted/Committed to Avalara AvaTax
Committed = Saved and Committed to Avalara AvaTax</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Temporary = Not Saved to Avalara AvaTax
Saved = Saved but not Posted/Committed to Avalara AvaTax
Committed = Saved and Committed to Avalara AvaTax</inlineHelpText>
        <label>AvaTax Doc Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__AvaTax_Message__c</fullName>
        <description>Displays AvaTax responses or messages.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays AvaTax responses or messages.</inlineHelpText>
        <label>AvaTax Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Calculate_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Triggers AvaTax to show the calculated tax.</description>
        <inlineHelpText>Triggers AvaTax to show the calculated tax.</inlineHelpText>
        <label>Calculate Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Cross_Border_Summary_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The resulting tax calculation response message indicating de minimus, source rules, and etc.</inlineHelpText>
        <label>Cross Border Summary Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Entity_Use_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Entity use codes indicate the reason for exemption.</description>
        <inlineHelpText>Entity use codes indicate the reason for exemption.</inlineHelpText>
        <label>Entity/Use Code</label>
        <referenceTo>AVA_MAPPER__Entity_Use_code__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Import_Fees__c</fullName>
        <inlineHelpText>The calculated customs duty and import fee for this transaction.</inlineHelpText>
        <label>Import Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Invoice_Message__c</fullName>
        <description>This field is used to display the invoicing messages for VAT functionality.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to display the invoicing messages for VAT functionality.</inlineHelpText>
        <label>Invoice Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Is_Seller_Importer_Of_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Seller is responsible for any import taxes and fees</description>
        <inlineHelpText>If checked, Seller is responsible for any import taxes and fees</inlineHelpText>
        <label>Is Seller Importer Of Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Origin_City__c</fullName>
        <description>Enter the city of your opportunity.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the city of your opportunity.</inlineHelpText>
        <label>Origin City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Origin_Country__c</fullName>
        <description>Enter the country of your opportunity.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the country of your opportunity.</inlineHelpText>
        <label>Origin Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Origin_Postal_Code__c</fullName>
        <description>Enter the zip/postal code of your opportunity.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the zip/postal code of your opportunity.</inlineHelpText>
        <label>Origin Zip/Postal Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Origin_State__c</fullName>
        <description>Enter the state/province of your opportunity.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the state/province of your opportunity.</inlineHelpText>
        <label>Origin State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Origin_Street__c</fullName>
        <description>Enter the street of your opportunity.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the street of your opportunity.</inlineHelpText>
        <label>Origin Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Sales_Tax__c</fullName>
        <description>Displays the tax amount calculated by AvaTax.</description>
        <inlineHelpText>Displays the tax amount calculated by AvaTax.</inlineHelpText>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__ShippingHandling_Tax__c</fullName>
        <description>Displays the Sales Tax calculated for Shipping and Handling.</description>
        <inlineHelpText>Displays the Sales Tax calculated for Shipping and Handling.</inlineHelpText>
        <label>Shipping and Handling Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__ShippingHandling__c</fullName>
        <description>Enter the amount for the Shipping and Handling.</description>
        <inlineHelpText>Enter the amount for the Shipping and Handling.</inlineHelpText>
        <label>Shipping and Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Shipping_Method__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Utilize this field to define the shipping mode in which the individual line item or transaction is being used. Cross Border tax calculation must be enabled in the configurations.</inlineHelpText>
        <label>Shipping Method</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Tax_Date__c</fullName>
        <description>This field determines the tax calculation date for the Opportunities. If left blank, will be the same as the Opportunity Date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field determines the tax calculation date for the Opportunities. If left blank, will be the same as the Opportunity Date.</inlineHelpText>
        <label>Tax Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AVA_SFCLOUD__Transport__c</fullName>
        <inlineHelpText>This specifies who is responsible for transport of the goods on the transaction</inlineHelpText>
        <label>Transport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AVA_SFCLOUD__Avalara_Transport</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing City</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Country</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing State</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Billing_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Zip</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Generate_Object__c</fullName>
        <description>Request to generate Estimate, invoice or sales order</description>
        <label>Generate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                    <default>true</default>
                    <label>Invoice</label>
                </value>
                <value>
                    <fullName>SalesOrder</fullName>
                </value>
                <value>
                    <fullName>SalesReceipt</fullName>
                </value>
                <value>
                    <fullName>Invoice Not Updated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVSFQB__PO_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Product_Name__c</fullName>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DBSync</fullName>
                </value>
                <value>
                    <fullName>AppMashup (Salesforce.com &amp; QuickBooks)</fullName>
                </value>
                <value>
                    <fullName>AssessRight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVSFQB__Products_Count__c</fullName>
        <description>Roll up Count of Opportunity Products for an opportunity</description>
        <label>Products Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_Error__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QB Error</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QuickBooks_ItemType__c</fullName>
        <label>QuickBooks ItemType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ItemService</fullName>
                </value>
                <value>
                    <fullName>ItemNonInventory</fullName>
                </value>
                <value>
                    <fullName>ItemOtherCharge</fullName>
                </value>
                <value>
                    <fullName>ItemInventory</fullName>
                </value>
                <value>
                    <fullName>ItemInventoryAssembly</fullName>
                </value>
                <value>
                    <fullName>ItemFixedAsset</fullName>
                </value>
                <value>
                    <fullName>ItemSubtotal</fullName>
                </value>
                <value>
                    <fullName>ItemDiscount</fullName>
                </value>
                <value>
                    <fullName>ItemPayment</fullName>
                </value>
                <value>
                    <fullName>ItemGroup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <description>QuickBooks Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Sales_Rep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Rep</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Ship_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping City</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Country</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping State</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Shipping_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Zip</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Terms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Terms</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Transaction_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Transaction_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Transaction Number</label>
        <length>31</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Is_Compliante__c</fullName>
        <formula>TEXT(Account.Account_in_Compliance__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Is Compliant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Precision_ID__c</fullName>
        <description>This field was created to be used in a report</description>
        <formula>Account.Precision_Id__c</formula>
        <label>Account Precision ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aesthetics_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aesthetics Promotion</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Promotions__c.Promotion_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Promotions__c.Aesthetics_Promotion_Lookup__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Promotions__c</referenceTo>
        <relationshipLabel>Opportunities (Aesthetics Promotion)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliate_Code__c</fullName>
        <description>This will come from Shopify for the specific affiliate that this opportunity is associated with. This will then be used in SF automation to fill in the Referred By field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Affiliate Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appointment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointment_Time__c</fullName>
        <label>Appointment Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>Populated with Approval date when Opportunity is inserted as or updated to Approved ( for all opportunities )</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assets_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assets Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                    <default>true</default>
                    <label>New Business</label>
                </value>
                <value>
                    <fullName>Existing Business</fullName>
                </value>
                <value>
                    <fullName>Upsell Business</fullName>
                </value>
                <value>
                    <fullName>Referral Business</fullName>
                </value>
                <value>
                    <fullName>Superhuman Protocol</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <description>This will come from Shopify for the specific campaign that this opportunity is associated with. This will then be used in SF automation to fill in the Primary Campaign field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Notes__c</fullName>
        <description>Enter additional notes for the Closed Lost Reason</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter additional notes for the Closed Lost Reason</inlineHelpText>
        <label>Closed Lost Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <label>Closed Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card Declined</fullName>
                </value>
                <value>
                    <fullName>Patient Cancellation</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Lost - No Show - Dead</fullName>
                </value>
                <value>
                    <fullName>Lost - Not Treatable</fullName>
                </value>
                <value>
                    <fullName>Patient Refunded</fullName>
                </value>
                <value>
                    <fullName>Transaction Voided</fullName>
                </value>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Patient Chargeback</fullName>
                </value>
                <value>
                    <fullName>Duplicate Opportunity Found</fullName>
                </value>
                <value>
                    <fullName>Refunded</fullName>
                    <isActive>false</isActive>
                    <label>Refunded</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Year__c</fullName>
        <formula>TEXT(YEAR(CloseDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Form_File_Names__c</fullName>
        <description>These will hold what consent forms were signed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Consent Form File Names</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consent_Form_Signed_Date__c</fullName>
        <description>This will hold when the consent form(s) were signed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Consent Form Signed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Consent_Form_Signer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consent Form Signer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consult_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Consult Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consultation_Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultation Practitioner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Affiliate Doctor Account Record Type</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Consultation Pratitioner)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Commission__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TEMP field used for Commission Creation flow</description>
        <label>Create Commission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Type__c</fullName>
        <label>Credit Card Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>Mastercard</fullName>
                </value>
                <value>
                    <fullName>Discover</fullName>
                </value>
                <value>
                    <fullName>American Express</fullName>
                </value>
                <value>
                    <fullName>MC Eurocard</fullName>
                </value>
                <value>
                    <fullName>UK Maestro</fullName>
                </value>
                <value>
                    <fullName>JCB Card</fullName>
                </value>
                <value>
                    <fullName>Diners Club</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>